Shift headline values to ensure that the page title is always a H1

--- a/Resources/Private/Less/Components/Contents.less
+++ b/Resources/Private/Less/Components/Contents.less
@@ -65,7 +65,7 @@ a {
         position: relative;
         margin: 60px 0;
         text-align: center;
-        h2 {
+        h1 {
             position: relative;
             margin: 0;
             font-size: 38px;
@@ -120,18 +120,24 @@ a {
             }
         }
     }
-    h3 {
+    h2 {
         font-size: 24px;
         font-weight: 600;
         font-style: italic;
         margin-top: 60px;
         color: @brand-primary-dark;
     }
-    h4 {
+    h3 {
         font-size: 18px;
         font-weight: 700;
         margin-top: 30px;
         color: @brand-secondary;
+    }
+    h4 {
+        font-size: 16px;
+        font-weight: 700;
+        margin: 30px 0 -30px 0;
+        color: rgb(51, 51, 51);
     }
     p {
         margin: 30px 0;
