--- a/Resources/Private/Less/Modules/Header.less
+++ b/Resources/Private/Less/Modules/Header.less
@@ -28,58 +28,46 @@
         content: " ";
         opacity: 0.1;
     }
-    h1 {
+    a.header-brand {
+        position: absolute;
+        top: 15px;
+        left: 15px;
+        right: 100px;
+        height: 50px;
         margin: 0;
+        display: block;
+        overflow: hidden;
+        text-indent: 200%;
+        white-space: nowrap;
         padding: 0;
-        a {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            right: 100px;
-            height: 50px;
-            margin: 0;
-            display: block;
-            overflow: hidden;
-            text-indent: 200%;
-            white-space: nowrap;
-            padding: 0;
-            background: url('../Images/sxndLogo.svg') no-repeat left center;
-            background-size: 100% 100%;
-        }
+        background: url('../Images/sxndLogo.svg') no-repeat left center;
+        background-size: 100% 100%;
     }
     @media screen and (min-width: @phoneLandscapeViewportWidth) {
-        h1 {
-            a {
-                left: 30px;
-                right: auto;
-                width: 300px;
-            }
+        a.header-brand {
+            left: 30px;
+            right: auto;
+            width: 300px;
         }
     }
     @media screen and (min-width: @tabletViewportWidth) {
         height: 100px;
         background: @brand-secondary url(../Images/pageHeaderBg.jpg) no-repeat center bottom;
         background-size: cover;
-        h1 {
-            a {
-                top: 25px;
-                left: 50px;
-            }
+        a.header-brand {
+            top: 25px;
+            left: 50px;
         }
     }
     @media screen and (min-width: @tabletLandscapeViewportWidth) {
-        h1 {
-            a {
-                left: 0;
-            }
+        a.header-brand {
+            left: 0;
         }
     }
     @media screen and (min-width: @desktopViewportWidth) {
         height: 140px;
-        h1 {
-            a {
-                top: 40px;
-            }
+        a.header-brand {
+            top: 40px;
         }
     }
 }
