--- a/Resources/Public/Css/SxndStyles.css
+++ b/Resources/Public/Css/SxndStyles.css
@@ -1009,7 +1009,7 @@ a.btn[target="_blank"]:after {
   margin: 60px 0;
   text-align: center;
 }
-.content-wrapper .page-header h2 {
+.content-wrapper .page-header h1 {
   position: relative;
   margin: 0;
   font-size: 38px;
@@ -1061,18 +1061,24 @@ a.btn[target="_blank"]:after {
   display: block;
   font-size: 14px;
 }
-.content-wrapper h3 {
+.content-wrapper h2 {
   font-size: 24px;
   font-weight: 600;
   font-style: italic;
   margin-top: 60px;
   color: #729a23;
 }
-.content-wrapper h4 {
+.content-wrapper h3 {
   font-size: 18px;
   font-weight: 700;
   margin-top: 30px;
   color: #475a5a;
+}
+.content-wrapper h4 {
+  font-size: 16px;
+  font-weight: 700;
+  margin: 30px 0 -30px 0;
+  color: #333333;
 }
 .content-wrapper p {
   margin: 30px 0;
@@ -2246,11 +2252,7 @@ body,
   content: " ";
   opacity: 0.1;
 }
-.header h1 {
-  margin: 0;
-  padding: 0;
-}
-.header h1 a {
+.header a.header-brand {
   position: absolute;
   top: 15px;
   left: 15px;
@@ -2266,7 +2268,7 @@ body,
   background-size: 100% 100%;
 }
 @media screen and (min-width: 480px) {
-  .header h1 a {
+  .header a.header-brand {
     left: 30px;
     right: auto;
     width: 300px;
@@ -2278,13 +2280,13 @@ body,
     background: #475a5a url(../Images/pageHeaderBg.jpg) no-repeat center bottom;
     background-size: cover;
   }
-  .header h1 a {
+  .header a.header-brand {
     top: 25px;
     left: 50px;
   }
 }
 @media screen and (min-width: 1024px) {
-  .header h1 a {
+  .header a.header-brand {
     left: 0;
   }
 }
@@ -2292,7 +2294,7 @@ body,
   .header {
     height: 140px;
   }
-  .header h1 a {
+  .header a.header-brand {
     top: 40px;
   }
 }
